03/20 실습 문제 풀이 완료

--- a/99_Practice/src/main/webapp/index.html
+++ b/99_Practice/src/main/webapp/index.html
@@ -21,7 +21,8 @@
 	<nav>
 		<ul>
 			<!-- TODO: practice1_random.html 파일로 이동하기 위한 링크 생성 -->
-			<a href="views/practice1_random.html">asd</a>
+			<li><a href="views/practice1_random.html">연습 (1) - 랜덤 숫자 뽑기</a></li>
+			<li><a href="/practice/practice2_pizza.do">연습 (2) - 피자 주문</a></li>
 		</ul>
 	</nav>
 </body>
