--- a/99_Practice/src/main/webapp/index.html
+++ b/99_Practice/src/main/webapp/index.html
@@ -23,6 +23,7 @@
 			<!-- TODO: practice1_random.html 파일로 이동하기 위한 링크 생성 -->
 			<li><a href="views/practice1_random.html">연습 (1) - 랜덤 숫자 뽑기</a></li>
 			<li><a href="/practice/practice2_pizza.do">연습 (2) - 피자 주문</a></li>
+			<li><a href="/practice/wrongUrl">잘못된 접근</a></li>
 		</ul>
 	</nav>
 </body>
