03/24 공부내용 정리

--- a/99_Practice/src/main/webapp/index.html
+++ b/99_Practice/src/main/webapp/index.html
@@ -24,6 +24,9 @@
 			<li><a href="views/practice1_random.html">연습 (1) - 랜덤 숫자 뽑기</a></li>
 			<li><a href="/practice/practice2_pizza.do">연습 (2) - 피자 주문</a></li>
 			<li><a href="/practice/wrongUrl">잘못된 접근</a></li>
+			<!-- TODO: JSTL 연습 페이지로 이동 -->
+			<li><a href="practice.jstl">JSTL 연습</a></li>
+			<!--<li><a href="/practice/practice.jstl">JSTL 연습</a></li>  --> <!-- 절대경로 -->
 		</ul>
 	</nav>
 </body>
